--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Ejecutar pruebas
       run: |
         source venv/bin/activate
-        pytest
+        python -m pytest tests/test_api.py
